- fixed visibility bug in tags-by-time renderer;

--- a/tile-examples/twitter-demo/twitter-client/src/main/webapp/css/renderers.css
+++ b/tile-examples/twitter-demo/twitter-client/src/main/webapp/css/renderers.css
@@ -307,7 +307,7 @@
 
 .details-chart-bars {
 	position: relative;
-	padding-top:5%;
+	padding-top:5px;
 	height: 75%;
 }
 
